public/authboxes/loginbox.css
.loginbox-partial {
	min-width: 380px;
}
.loginbox-partial .color-black {
	color: #333333;
}

.loginbox-partial .loginbox-partial-inner {
	background-color: white;
}

.loginbox-partial legend {
	margin-bottom: 8px;
}

.loginbox-partial .input-label {
	padding-left: 0px;
	width: 60px;
}

.loginbox-partial .fb-login {
	margin-bottom: 12px;
}

.loginbox-partial .inline-logo {
	height: 16px;
	width: 16px;
	padding-right: 4px;
	vertical-align: text-top;
}

.loginbox-partial .control-group {
	margin-bottom: 0px;
}

.loginbox-partial .login-button {
	padding-left: 12px;
	padding-right: 12px;
}

